one line change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Homepage</title>
 </head>
 <body>
-    <h1>home page</h1>
-    <p>welcome to my web</p>
+    <h1>new page</h1>
 </body>
 </html>
